--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-img{
+  width: 160px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.searchbar-container{
   display: flex;
   flex-direction: column;
+  margin: 0px auto;
+  padding: 0 20px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.searchbar{
+  background-color: white;
+  margin-right: 20px;
+}
+.searchbar input{
+  padding: 10px;
+  box-shadow: 0px 2px 2px (0, 0. 0. 0.25);
+  border-radius: 3px;
+  border: none;
+  margin-right: 20px;
+}
+.searchbar-btn button{
+  background-color: #b88dfb;
+  border: none;
+  border-radius: 20px;
+  height: 35px;
   color: white;
-}
+  padding: 10px 20px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  text-align: center;
 }
